<resources>
<string name="app_name">Voice Memos</string>
<string name="abc_action_bar_home_description">Navigate home</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_action_menu_overflow_description">More options</string>
<string name="abc_action_mode_done">Done</string>
<string name="abc_activity_chooser_view_see_all">See all</string>
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<string name="abc_capital_off">OFF</string>
<string name="abc_capital_on">ON</string>
<string name="abc_font_family_body_1_material">sans-serif</string>
<string name="abc_font_family_body_2_material">sans-serif-medium</string>
<string name="abc_font_family_button_material">sans-serif-medium</string>
<string name="abc_font_family_caption_material">sans-serif</string>
<string name="abc_font_family_display_1_material">sans-serif</string>
<string name="abc_font_family_display_2_material">sans-serif</string>
<string name="abc_font_family_display_3_material">sans-serif</string>
<string name="abc_font_family_display_4_material">sans-serif-light</string>
<string name="abc_font_family_headline_material">sans-serif</string>
<string name="abc_font_family_menu_material">sans-serif</string>
<string name="abc_font_family_subhead_material">sans-serif</string>
<string name="abc_font_family_title_material">sans-serif-medium</string>
<string name="abc_menu_alt_shortcut_label">Alt+</string>
<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
<string name="abc_menu_delete_shortcut_label">delete</string>
<string name="abc_menu_enter_shortcut_label">enter</string>
<string name="abc_menu_function_shortcut_label">Function+</string>
<string name="abc_menu_meta_shortcut_label">Meta+</string>
<string name="abc_menu_shift_shortcut_label">Shift+</string>
<string name="abc_menu_space_shortcut_label">space</string>
<string name="abc_menu_sym_shortcut_label">Sym+</string>
<string name="abc_prepend_shortcut_label">Menu+</string>
<string name="abc_search_hint">Search…</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_query">Search query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abc_shareactionprovider_share_with">Share with</string>
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<string name="abc_toolbar_collapse_description">Collapse</string>
<string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
<string name="audio_db_album_name">Bkav recordings</string>
<string name="audio_db_artist_name">BkavSoundRecorder</string>
<string name="audio_db_playlist_name">My recordings</string>
<string name="audio_db_title_format">dd/MM/yyyy - HH:mm:ss</string>
<string name="audio_db_title_format_dialog">yyyyMMddHHmmss</string>
<string name="bkav_recorder_7_day_newest">Last 7 days</string>
<string name="bkav_recorder_day">Day</string>
<string name="bkav_recorder_month">Month</string>
<string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
<string name="button_ok">OK</string>
<string name="calibrate">Calibrate</string>
<string name="category_key">category</string>
<string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
<string name="character_counter_pattern">%1$d / %2$d</string>
<string name="date_recorder">faksfkjakljh</string>
<string name="def_save_mimetype">audio/amr</string>
<string name="def_save_name_format">yyyy-MM-dd-HH-mm-ss</string>
<string name="def_save_name_prefix">REC-</string>
<string name="default_format_file">audio/amr</string>
<string name="delete_context_menu">Delete</string>
<string name="des_play_button">Play - Pause - Resume</string>
<string name="device_auto_gain">Device auto gain control (AGC)</string>
<string name="dialog_cancel_button">Cancel</string>
<string name="dialog_ok_button">OK</string>
<string name="duplicate_name">This name already exits. Auto naming with current time.</string>
<string name="duplicate_name_save">This name already exits. Auto naming for file</string>
<string name="duration_recorder">00:00</string>
<string name="empty_name">This name is empty. Auto naming with current time.</string>
<string name="empty_recording">No recording</string>
<string name="error_app_internal">Could not start recording. Another app is using the microphone</string>
<string name="error_mediadb_new_record">"Couldn't save recorded audio."</string>
<string name="error_sdcard_access">"Can't access SD card."</string>
<string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
<string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
<string name="file_deleted">File has been deleted!</string>
<string name="file_saved_interrupt">Recording has been stopped and saved</string>
<string name="fingerprint_mode">Fingerprint mode</string>
<string name="fingerprint_mode_des">Use fingerprint gestures to start/stop recording</string>
<string name="fingerprint_mode_title">Use fingerprint gestures</string>
<string name="folder">Recordings</string>
<string name="folder_name">Recording</string>
<string name="gain_factor">Gain factor: 1.0x</string>
<string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
<string name="hide_from_media_player_key">hideFromMediaPlayers</string>
<string name="hide_from_media_player_title">Hide from media player</string>
<string name="insert_sd_card">Insert an SD card</string>
<string name="itemdeleted">Item deleted</string>
<string name="keep_screen_on_des">Keep screen on during recording</string>
<string name="keep_screen_on_key">keepScreenOn</string>
<string name="keep_screen_on_title">Keep screen on</string>
<string name="max_length_reached">Maximum length reached</string>
<string name="menu_settings">Settings</string>
<string name="mic_gain_calibrate">Mic gain calibration:</string>
<string name="mic_gain_calibrate_des">Press button, make some noise to determine maximum gain factor, then press button again</string>
<string name="mic_level">Mic level:</string>
<string name="microphone_adjustment_key">microphoneAdjustment</string>
<string name="microphone_adjustment_title">Microphone adjustment</string>
<string name="microphone_done">Done</string>
<string name="microphone_test">Test</string>
<string name="min_available">%d min available</string>
<string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
<string name="name_by_date_time_des">The record is auto-named with current time.</string>
<string name="name_by_date_time_key">nameByDateTime</string>
<string name="name_by_date_time_title">Name the file by time</string>
<string name="name_recorder">abc</string>
<string name="notification_body_pause">Pause</string>
<string name="notification_body_play">Recording</string>
<string name="notification_body_play_2">Play</string>
<string name="notification_pause">Pause</string>
<string name="notification_play">Recorder</string>
<string name="notification_stop">Stop</string>
<string name="notification_title">Sound Recorder</string>
<string name="notify_incall_record">In call record</string>
<string name="notify_not_disturb_permission">Allow Sound Recorder access Do Not Disturb access?</string>
<string name="notify_not_disturb_permission_summary">To enable this feature, press on SETTINGS below and activate Recorder.</string>
<string name="notify_not_overlay_permission">Allow Sound Recorder Display over other apps?</string>
<string name="notify_not_overlay_permission_summary">To enable this feature, press on SETTINGS below, select Recorder and activate Display over other apps.</string>
<string name="notify_not_permission">Allow Sound Recorder access your Phone state, Storage and Micro?</string>
<string name="notify_not_permission_summary">To enable this feature, press on SETTINGS below and activate Storage, Micro and Phone in Permissions.</string>
<string name="notity_if_press_back">Please click back again to save file and exit!</string>
<string name="open_settings">Settings</string>
<string name="password_toggle_content_description">Show password</string>
<string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
<string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
<string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
<string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
<string name="pause_during_phone_call">Pause during phone calls</string>
<string name="pause_during_phone_call_key">pauseDuringPhoneCall</string>
<string name="quick_recorder">quick_recorder</string>
<string name="record_name_count_key">recordNameCount</string>
<string name="record_state_idle">Idle</string>
<string name="record_state_pause">Pause</string>
<string name="record_state_recording">Recording. . .</string>
<string name="rename_checkbox">"Don't show again"</string>
<string name="rename_context_menu">Rename</string>
<string name="rename_name_dialog">New name</string>
<string name="rename_request_des">Show rename dialog</string>
<string name="rename_request_key">renameRequest</string>
<string name="rename_request_title">Rename request</string>
<string name="sample_rate_des">Different types of file formats will have different capacity and sound quality</string>
<string name="sample_rate_des_api_22">Big rate means better quality but larger file size</string>
<string name="sample_rate_key">sampleRate</string>
<string name="sample_rate_key_api_22">sampleRate_api_22</string>
<string name="sample_rate_title">File type</string>
<string name="sample_rate_title_api_22">Sample rate</string>
<string name="save">Saved</string>
<string name="search_menu_title">Search</string>
<string name="sec_available">%d s available</string>
<string name="set_name_dialog">Save as</string>
<string name="share_context_menu">Share</string>
<string name="silent_mode">Silent mode</string>
<string name="silent_mode_des">Change phone to silent mode</string>
<string name="silent_mode_title">Silent Mode</string>
<string name="size_recorder">100kb</string>
<string name="start_audio_time">00:00</string>
<string name="start_record_time">00:00:000</string>
<string name="status_bar_notification_info_overflow">999+</string>
<string name="storage_is_full">Storage is full</string>
<string name="sum_hide_from_media">Saved audio files will be hidden in the media player</string>
<string name="taptoundo">Undo</string>
<string name="time_start">00:00:000</string>
<string name="timer_format" formatted="false">%02d:%02d:%03d</string>
<string name="title_head">Rec-</string>
<string name="title_list_record">Recording list</string>
<string name="title_new_name">New name</string>
<string name="toast_duplicate_name">New name is duplicated! Please change other name</string>
<string name="toast_empty_name">Filename is not empty!</string>
<string name="toast_notify_error_file">Can not open file!</string>
<string name="voice_gain_key">voiceGain</string>
</resources>