<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:id="@+id/layout_item"
    android:background="#fff6f6f6"
    android:paddingTop="@dimen/item_padding_bot_top"
    android:paddingBottom="@dimen/item_padding_bot_top"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/item_padding_start_end"
    android:paddingEnd="@dimen/item_padding_start_end"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal"
        android:id="@+id/body_item"
        android:focusable="false"
        android:clickable="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/play_recorder"
            android:focusable="false"
            android:clickable="false"
            android:layout_width="@dimen/icon_play_size"
            android:layout_height="@dimen/icon_play_size"
            android:src="@drawable/play_button"
            android:layout_centerVertical="true"
            android:contentDescription="@string/des_play_button" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/play_recorder">
            <TextView
                android:textSize="@dimen/text_first_size"
                android:textColor="@color/text_color_first"
                android:id="@+id/duration_recorder"
                android:paddingBottom="7.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_recorder"
                android:layout_above="@+id/date_recorder"
                android:layout_alignParentEnd="true" />
            <TextView
                android:textSize="@dimen/text_first_size"
                android:textColor="@color/text_color_first"
                android:ellipsize="end"
                android:id="@+id/name_recorder"
                android:paddingBottom="7.0dip"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_recorder"
                android:singleLine="true"
                android:layout_alignWithParentIfMissing="true"
                android:paddingStart="9.0dip"
                android:layout_toStartOf="@+id/duration_recorder"
                android:layout_alignParentStart="true" />
            <TextView
                android:textSize="@dimen/text_second_size"
                android:textColor="@color/text_color_second"
                android:ellipsize="end"
                android:id="@+id/date_recorder"
                android:focusable="false"
                android:visibility="visible"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_recorder"
                android:singleLine="true"
                android:layout_below="@+id/name_recorder"
                android:layout_alignParentBottom="false"
                android:layout_alignWithParentIfMissing="true"
                android:paddingStart="9.0dip"
                android:paddingEnd="11.0dip"
                android:layout_toStartOf="@+id/size_recorder"
                android:layout_alignParentStart="true" />
            <TextView
                android:textSize="@dimen/text_second_size"
                android:textColor="@color/text_color_second"
                android:id="@+id/size_recorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_recorder"
                android:layout_below="@+id/duration_recorder"
                android:layout_alignParentBottom="false"
                android:layout_alignWithParentIfMissing="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/toolbar"
        android:focusable="false"
        android:visibility="visible"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="30.0dip"
        android:layout_below="@+id/body_item"
        android:paddingStart="6.0dip">
        <TextView
            android:id="@+id/play_time"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_audio_time" />
        <SeekBar
            android:id="@+id/play_seekbar"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:progress="0"
            android:thumb="@drawable/seekbar_thumb"
            android:layout_weight="1.61"
            android:layout_marginStart="7.0dip" />
    </LinearLayout>
</RelativeLayout>